[package]
name = "rustpotter-cli"
version = "3.0.2"
edition = "2021"
license = "Apache-2.0"
description = "CLI for Rustpotter, an open source wakeword spotter forged in rust."
authors = ["Miguel Álvarez Díez <miguelwork92@gmail.com>"]
repository = "https://github.com/GiviMAD/rustpotter-cli"
exclude = ["tools/**",".github",".gitignore"]
[dependencies]
rustpotter = { git = "https://github.com/lexunok/rustpotter.git", branch = "main", features = ["debug", "display", "audio", "record"] }
ctrlc = "3.2.2"
clap = { version = "4.4.6", features = ["derive"] }
hound = "3.5.1"
cpal = "0.16.0"
time = "0.3.29"
gag = "1.0.0"
